Move destiny/doom tracker higher to avoid overlapping players component

--- a/css/trilhamarga.css
+++ b/css/trilhamarga.css
@@ -463,7 +463,7 @@ body.game .sheet.app header.sheet-header {
 /* Tracker styling */
 #destiny-tracker {
   position: fixed;
-  bottom: 81px;
+  bottom: 180px;
   left: 16px;
   right: auto;
   z-index: 60;
